--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
     font-family: 'Open Sans', sans-serif;
     color:#fff;
     font-size:16pt;
-    bgcolor: black; 
+    background-color: black; 
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
